--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,6 +1,6 @@
 <div id="main">
 
-<% if session[:id] %>
+<% if session[:twitter_id] %>
 <a href="/logout">ログアウト</a>
 <% else %>
 <a href="/auth/twitter">Twitterログイン</a>
