--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -16,6 +16,17 @@ body{
   display:none;
 }
 
+#setting{
+  #cha_1{
+    float:left;
+  }
+  #cha_1{
+    float:right;
+  }
+
+}
+
+
 input{
   border:none;
   background:#ccc;
