--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -19,9 +19,15 @@ body{
 #setting{
   #cha_1{
     float:left;
+    img{
+      width:300px;
+    }
   }
-  #cha_1{
+  #cha_2{
     float:right;
+    img{
+      width:300px;
+    }
   }
 
 }
