--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -16,7 +16,64 @@ body{
   display:none;
 }
 
+#index{
+  table{
+    width:100%;
+    tr{
+      width:100%;
+    }
+  }
+  td.item{
+    opacity:0.8;
+    margin:10px;
+    background:#fff;
+    border:none;
+    border-radius: 20px 20px 20px 20px;
+    padding:10px;
+    vertical-align:middle;
+    font-size:23px;
+    div.text{
+      margin-top:8px;
+      float:left;
+    }
+    img{
+      float:left;
+    }
+  }
+
+  img.done{
+    opacity:0.8;
+  }
+
+  #nohope{
+    opacity:0.8;
+    margin:10px;
+    background:#fff;
+    border:none;
+    border-radius: 20px 20px 20px 20px;
+    padding:10px;
+    vertical-align:middle;
+    font-size:23px;
+  }
+}
+
 #setting{
+  h1{
+    width:100%;
+    text-align:center;
+  }
+
+  input.inputs{
+    margin:10px;
+    height:50px;
+    width:80%;
+    background:#fff;
+    border:none;
+    border-radius: 3px 3px 3px 3px;
+    opacity: 0.5;
+  }
+
+
   #chars{
     width:100%;
     #cha_1{
@@ -35,7 +92,3 @@ body{
 }
 
 
-input{
-  border:none;
-  background:#ccc;
-}
