--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,8 +1,1 @@
-<div id="main">
-
-<% if session[:twitter_id] %>
-<a href="/logout">ログアウト</a>
-<% else %>
-<a href="/auth/twitter">Twitterログイン</a>
-<% end %>
-</div>
+<div id="main"></div>
