--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -17,6 +17,17 @@ body{
 }
 
 #index{
+  h1.index{
+    opacity:0.8;
+    margin:10px;
+    background:#fff;
+    border:none;
+    border-radius: 20px 20px 20px 20px;
+    padding:10px;
+    vertical-align:middle;
+    font-size:23px;
+
+  }
   table{
     width:100%;
     tr{
@@ -130,7 +141,7 @@ body{
 
 
 
-#login, #done_hope, #nohope, #friends, #help{
+#login, #done_hope, #nohope, #friends, #help, #index{
   margin:30px;
   text-align:center;
   a{
