--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -105,7 +105,7 @@ body{
       td{
         width:32%;
         img{
-          width:100%;
+          width:300px;
         }
       }
     }
@@ -147,10 +147,21 @@ body{
   a{
     display:block;
   }
+}
+
+
+#login, #nohope, #friends, #help, #index{
   .cha{
     width:250px;
   }
 }
+
+#done_hope{
+  .cha{
+    width:350px;
+  }
+}
+
 
 #done_hope div, #nohope div, #help p{
   opacity:0.8;
